<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dominó Doble 9</string>
    <string name="action_history">History</string>
    <string name="action_score">Score</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">229984737181155</string>
    <string name="boneyard">Boneyard</string>
    <string name="both_sides">Select matching corner</string>
    <string name="both_sides_down">Down</string>
    <string name="both_sides_left">Left</string>
    <string name="both_sides_right">Right</string>
    <string name="both_sides_up">Up</string>
    <string name="confirm_no">No</string>
    <string name="confirm_yes">Yes</string>
    <string name="exit">Exit</string>
    <string name="facebook">Facebook</string>
    <string name="friends">Friends</string>
    <string name="help">Help</string>
    <string name="game_exit">Are you sure? You will lose the current game</string>
    <string name="game_hand_continue_them">It\'s %s\'s turn</string>
    <string name="game_hand_continue_you">It\'s your turn</string>
    <string name="game_hand_endgame">the game</string>
    <string name="game_hand_endhand">the hand</string>
    <string name="game_hand_lost">You have lost</string>
    <string name="game_hand_result">Result</string>
    <string name="game_hand_start_them">%s starts</string>
    <string name="game_hand_start_you">%s start</string>
    <string name="game_hand_tie">You have tied</string>
    <string name="game_hand_won">You have won</string>
    <string name="game_history">History</string>
    <string name="game_history_boneyard">picked</string>
    <string name="game_history_points">+%1$d points</string>
    <string name="game_new_game">New game</string>
    <string name="game_next_hand">Next hand</string>
    <string name="game_player_name">Player</string>
    <string name="game_sample_score1">0</string>
    <string name="game_sample_score2">88</string>
    <string name="game_sample_score3">100</string>
    <string name="game_score">Score</string>
    <string name="game_score_total">Total</string>
    <string name="game_score_hand">This hand</string>
    <string name="game_share_facebook">Facebook</string>
    <string name="game_share_result">Share</string>
    <string name="game_share_text_lose">Maybe next time! I\'ve just lost in #LagunexDomino for Android %1$d-%2$d</string>
    <string name="game_share_text_lose_muggins">Maybe next time! I played Muggins in #LagunexDomino for Android and I lost</string>
    <string name="game_share_text_win">Yes! I\'ve just won in #LagunexDomino for Android %1$d-%2$d</string>
    <string name="game_share_text_win_muggins">Yes! I played Muggins in #LagunexDomino for Android and I won %1$d-%2$d-%3$d-%4$d</string>
    <string name="game_share_twitter">Twitter</string>
    <string name="game_team_name">Team members</string>
    <string name="game_view_table">View table</string>
    <string name="google">Google</string>
    <string name="google_play_game_controller">Google Play Game Controller</string>
    <string name="google_signout">Sign out</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_profile">My Profile</string>
    <string name="new_game">New Classic Game</string>
    <string name="new_game_muggins">New Muggins Game</string>
    <string name="no">Nope</string>
    <string name="options">Settings</string>
    <string name="options_block_count">Block winner criteria</string>
    <string name="options_bones">Bone Style</string>
    <string name="options_display">Display</string>
    <string name="options_first_hand">First Hand</string>
    <string name="options_gameplay">Gameplay</string>
    <string name="options_gameplay_classic">Classic Gameplay</string>
    <string name="options_gameplay_muggins">Muggins Gameplay</string>
    <string name="options_maximum_score">Maximum Score</string>
    <string name="select_max">Select maximum score</string>
    <string-array name="entries" formatted="false">
        <item>100</item>
        <item>150</item>
    </string-array>
    <string name="first_hand_double">First hand counts double</string>
    <string name="changes">Settings changes will see in next game</string>
    <string name="options_next_hand">Next Hand</string>
    <string name="options_scoring">Score</string>
    <string name="options_scoring_classic">Classic Scoring</string>
    <string name="options_scoring_muggins">Muggins Scoring</string>
    <string name="options_scoring_muggins_end">Points at the end</string>
    <string name="options_scoring_points">Score</string>
    <string name="options_sound">Sound</string>
    <string name="options_table">Table Style</string>
    <string name="options_tiles">Tile Style</string>
    <string name="options_time_thinking">Game speed</string>
    <string name="pass_button">Pass</string>
    <string name="pass_or_pick_button">Pick /\10pass</string>
    <string name="pick_button">Pick</string>
    <string name="player_move">play</string>
    <string name="player_pass">passed</string>
    <string name="player_rival0">Front</string>
    <string name="player_rival1">Right</string>
    <string name="player_rival2">Left</string>
    <string name="player_teammate">Patner</string>
    <string name="player_you">You</string>
    <string name="profile_image_description">Profile image</string>
    <string name="profile_location">City, Country</string>
    <string name="profile_loss">Loss</string>
    <string name="profile_name">Player name</string>
    <string name="profile_number">123456</string>
    <string name="profile_score">Score</string>
    <string name="profile_wins">Wins</string>
    <string name="ranking">Ranking</string>
    <string name="ranking_classic_single">Classic ranking</string>
    <string name="ranking_achievements">Achievements</string>
    <string name="ranking_signin_required">Requires login</string>
    <string name="solo">Solo</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_ranking">Achievements and Leaderboards</string>
    <string name="title_activity_settings">Settings</string>
    <string name="view">View</string>
    <string name="world">World</string>
    <string name="share">Share</string>
    <string name="no_start">Your patner doesn\'t want to start. Do you want to start?</string>
    <string name="start">Your patner wants to start. Do you want to start?</string>
    <string name="wrong_turn">Calm down! it is not your turn</string>
</resources>