<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/sign_out_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/google_signout" android:onClick="signOutGoogle"/>
    <Button android:id="@+id/home_solo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_game" android:onClick="newSoloGame"/>
    <Button android:id="@+id/home_solo_muggins" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_game_muggins" android:onClick="newSoloMugginsGame"/>
    <Button android:id="@+id/home_ranking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ranking" android:onClick="openRanking"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/options" android:onClick="openSettings"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit" android:onClick="exitApp"/>
</LinearLayout>
